--- a/y/index.html
+++ b/y/index.html
@@ -95,15 +95,14 @@
                 <h3 class="text-white font-weight-normal mb-3">Hello, my name</h3>
                 <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Uriel Hernandez</h1>
                 <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                <div class="typed-text d-none">Web Developer, Front End Developer, Back End Developer, Apps Developer</div>
+                <div class="typed-text d-none">FullStack Developer, Front End Developer, Back End Developer, Mobile app Developer</div>
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                     <a href="" class="btn btn-white mr-4">Download CV</a>
-                    
                     <a href="" class="btn btn-blue d-none d-sm-block">Play Video</a>
                 </div>
             </div>
             <div class="col-lg-6 px-8 pl-lg-0 pb-5 pb-lg-4 about-img">
-                <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
+                <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.webp" alt="">
             </div>
         </div>
     </div>
@@ -120,19 +119,21 @@
         </div>
         <div class="row align-items-center">
             <div class="col-lg-5 pb-4 pb-lg-0">
-                <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
+                <img class="img-fluid rounded w-100" src="img/about.webp" alt="">
             </div>
             <div class="col-lg-7">
-                <h3 class="mb-4">UI/UX Designer & Web Developer</h3>
-                <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum. Amet dolor stet lorem diam dolor justo et dolor dolor dolor</p>
+                <h3 class="mb-4">Experienced FullStack Developer</h3>
+                <p>Experienced and self-motivated  Web Developer bringing forth industry experience and a passion for management. Results oriented with a proven track record of working collaboratively with team members to archive goals. 
+                    The fast and dedicated learner with a growth mindset, always striving to develop new skills and expand technical knowledge.
+                    Servicing scalable and flexible applications with a clear and extensile codebase</p>
                 <div class="row mb-3">
-                    <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Kate Winslet</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">1 April 1990</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Uriel Hernandez</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Country: <span class="text-secondary">Mexico</span></h6></div>
                     <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Master</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">10 Years</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+012 345 6789</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">info@example.com</span></h6></div>
-                    <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">123 Street, New York, USA</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">5 Years</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+52 5580102821</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">admin@seniorfulldev.tech</span></h6></div>
+                    <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">marquez 16, jardines de morelos, ecatepec</span></h6></div>
                     <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                 </div>
                 <a href="" class="btn blue btn-outline-primary mr-4">Hire Me</a>
@@ -150,7 +151,7 @@
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
             <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1>
-            <h1 class="position-absolute text-uppercase text-primary">My Skills</h1>
+            <h1 class="position-absolute text-uppercase text-primary">My Top Skills</h1>
         </div>
         <div class="row align-items-center">
             <div class="col-md-6">
@@ -181,8 +182,26 @@
                         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
+                <div class="skill mb-4">
+                  <div class="d-flex justify-content-between">
+                      <h6 class="font-weight-bold">Laravel</h6>
+                      <h6 class="font-weight-bold">90%</h6>
+                  </div>
+                  <div class="progress">
+                      <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+              </div>
             </div>
             <div class="col-md-6">
+              <div class="skill mb-4">
+                <div class="d-flex justify-content-between">
+                    <h6 class="font-weight-bold">React.js</h6>
+                    <h6 class="font-weight-bold">95%</h6>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </div>
                 <div class="skill mb-4">
                     <div class="d-flex justify-content-between">
                         <h6 class="font-weight-bold">Javascript</h6>
@@ -203,7 +222,7 @@
                 </div>
                 <div class="skill mb-4">
                     <div class="d-flex justify-content-between">
-                        <h6 class="font-weight-bold">Wordpress</h6>
+                        <h6 class="font-weight-bold">Vue.js</h6>
                         <h6 class="font-weight-bold">85%</h6>
                     </div>
                     <div class="progress">
@@ -226,15 +245,15 @@
             <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
             <h1 class="position-absolute text-uppercase text-primary">Education & Expericence</h1>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-top">
             <div class="col-lg-6">
                 <h3 class="mb-4">My Education</h3>
                 <div class="border-left border-primary pt-2 pl-4 ml-2">
                     <div class="position-relative ex-me mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
                         <h5 class="font-weight-bold mb-1">Bachelor of Science</h5>
-                        <p class="mb-2"><strong>Cambridge University</strong> | <small>2005 - 2009</small></p>
-                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                        <p class="mb-2"><strong>Fundacion Azteca, Mexico City</strong> | <small>2015 - 2018</small></p>
+                        <p>Computer Engineering</p>
                     </div>
                     <div class="position-relative ex-me mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
@@ -242,12 +261,7 @@
                         <p class="mb-2"><strong>Cambridge University</strong> | <small>2009 - 2011</small></p>
                         <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
                     </div>
-                    <div class="position-relative ex-me mb-4">
-                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
-                        <h5 class="font-weight-bold mb-1">IIT Kharagpur</h5>
-                        <p class="mb-2"><strong>Cambridge University</strong> | <small>2011 - 2015</small></p>
-                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
-                    </div>
+                   
                 </div>
             </div>
             <div class="col-lg-6">
@@ -255,21 +269,24 @@
                 <div class="border-left border-primary pt-2 pl-4 ml-2">
                     <div class="position-relative ex-me mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                        <h5 class="font-weight-bold mb-1">Web Designer</h5>
-                        <p class="mb-2"><strong>Soft Company</strong> | <small> Excellent</small></p>
-                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                        <h5 class="font-weight-bold mb-1">Full-stack Developer</h5>
+                        <p class="mb-2"><strong>Linktracker Pro</strong> | <small> Excellent</small></p>
+                        <p>Building web and mobile applications (front-end, module development, component development, microservice development, module functionality building, Laravel api, SEO, communication with 3rd party API).</p>
                     </div>
                     <div class="position-relative ex-me mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                        <h5 class="font-weight-bold mb-1">Artificial Intelligence</h5>
-                        <p class="mb-2"><strong>Soft Company</strong> | <small> Good</small></p>
-                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                        <h5 class="font-weight-bold mb-1">Frontend Developer</h5>
+                        <p class="mb-2"><strong>Prosapient Soft Company</strong> | <small> Good</small></p>
+                        <p>Building React components, Building app routing, Building 
+                            application storage(redux-store), reducers, basic sagas, modules for sending and getting data from API.</p>
                     </div>
                     <div class="position-relative ex-me mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
-                        <h5 class="font-weight-bold mb-1">Web Development</h5>
-                        <p class="mb-2"><strong>Soft Company</strong> | <small> Excellent</small></p>
-                        <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum stet lorem diam</p>
+                        <h5 class="font-weight-bold mb-1">Backend Developer</h5>
+                        <p class="mb-2"><strong>savepoint</strong> | <small> Excellent</small></p>
+                        <p>Common tasks: Building React components, Building app routing, Building application storage(redux-store), reducers, basic sagas, modules for sending and getting data from API.
+                            Building express server, application endpoints, controllers. Building mock-data files. Render tests writing. Deploy on Heroku.
+                            <br>Team: 3 people (front-end + back-end(1), QA(1), Project-manager(1))</p>
                     </div>
                 </div>
             </div>
@@ -438,21 +455,23 @@
                 <div class="owl-carousel testimonial-carousel">
                     <div class="text-center">
                         <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                        <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
-                        <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;">
+                        <h4 class="font-weight-light mb-4">Uriel immediately fully understood what I wanted and I am extremely satisfied with it. I recommend anyone to work with. I know now that it can meet my requirements, I would come back without worries! Thank you again.</h4>
+                        <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-1.png" style="width: 80px; height: 80px;">
                         <h5 class="font-weight-bold m-0">Client Name</h5>
                         <span>Profession</span>
                     </div>
                     <div class="text-center">
                         <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                        <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                        <h4 class="font-weight-light mb-4">The best freelancer i have worked with to date, perfectly understood my requirements and completed the job very quickly.
+
+                            Thank you so much, will definatly be re hiring.</h4>
                         <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
                         <h5 class="font-weight-bold m-0">Client Name</h5>
                         <span>Profession</span>
                     </div>
                     <div class="text-center">
                         <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                        <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet accusam amet eirmod eos, labore diam clita</h4>
+                        <h4 class="font-weight-light mb-4">Fast, efficient, clear communication, very professional and far exceeded all my expectations. I have worked with a lot of web designs in the past which left me disappointed and did not get the final outcome needed for the project. I have been blown away this Uriel's service and expertise. Will definitely be using him and only him in the future. Thank you again for your amazing work!</h4>
                         <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-3.jpg" style="width: 80px; height: 80px;">
                         <h5 class="font-weight-bold m-0">Client Name</h5>
                         <span>Profession</span>
@@ -520,8 +539,8 @@
         <div class="d-flex justify-content-center mb-4">
             <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
             <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/uriel-hernandez-402960217/" class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a class="btn btn-light btn-social" href="#"><i class="fab fa-github"></i></a>
         </div>
         <div class="d-flex justify-content-center mb-3">
             <a class="text-white" href="#">Privacy</a>
